remove hash